--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -12,7 +12,7 @@
         >
         Key:
         <select name="key" @bind="_selectedKey"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            class="mt-1 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             >
             @foreach (var note in Enum.GetNames(typeof(NoteName)))
             {
@@ -26,7 +26,7 @@
     >
         Scale:
         <select name="scale" @bind="_selectedScale" 
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            class="mt-1 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
         >
             <option value="Major" selected>Major</option>
             <option value="Minor">Minor</option>
@@ -68,7 +68,7 @@
         }
     </div>
 </div>
-<div>
+<div class="my-4">
     <label for="numberOfNotes"
         class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
         >
